[gd_scene load_steps=2 format=3 uid="uid://results_screen"]

[ext_resource type="Script" path="res://scripts/ResultsScreen.gd" id="1_results_screen"]

[node name="ResultsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_results_screen")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ROUND OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerDamageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player Damage Dealt: 0"
horizontal_alignment = 1

[node name="PlayerReceivedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player Damage Received: 0"
horizontal_alignment = 1

[node name="AIDamageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "AI Damage Dealt: 0"
horizontal_alignment = 1

[node name="AIReceivedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "AI Damage Received: 0"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ContinueLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Click to Continue"
horizontal_alignment = 1
modulate = Color(1, 1, 1, 0.7)
